Updated part 3 examples to use the lastest ffi/ffm of panama and Java 25