@@ -1,22 +1,27 @@
 #!/bin/sh -x
 rm -rf classes
-rm -rf generated/src
 rm -rf src/sdl2
 rm -rf src/org
 
-jextract --source --output src -t sdl2 \
+# Generate SDL2.h to java bindings // #-I /usr/local/include/SDL2 -l SDL2 \
+jextract --output src -t sdl2 \
     -I /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include \
-    -I /usr/local/include/SDL2 -l SDL2 \
+    -I /opt/homebrew/Cellar/sdl2/2.32.10/include/SDL2 \
+    -l SDL2 \
     --header-class-name LibSDL2 \
     sdlfoo.h
 
+# Generate foo.h to java bindings
+
+# jextract foo.h While the following still a preferred way to group a bunch of header files in one header file (foo.h)
+# new in jextract allows you to specify one to many header files using double quotes.
+#
+#jextract --output src -t org.unix \
+#  -I /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include \
+#  foo.h
+
+# In favor of the new way to specify multiple header files. But this requires the --header-class-name to be supplied.
+jextract --output src --header-class-name foolib -t org.unix "<time.h>" "<stdio.h>" "<sys/types.h>" "<unistd.h>"
+
 # add to classes (IMPORTANT: Notice namespace ..src/sdl2/..)
-javac --enable-preview --source 19 -d classes src/sdl2/*.java
-
-jextract --source --output src -t org.unix \
-  -I /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include \
-  foo.h
-
-jextract --output classes -t org.unix \
-  -I /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include \
-  foo.h
+javac -cp .:classes -d classes src/sdl2/*.java src/org/**/*.java src/*.java
